--- a/montana_covid_data.Rmd
+++ b/montana_covid_data.Rmd
@@ -215,6 +215,8 @@ jbasin_county <- county_function("Judith Basin")
 sweetgrass_county <- county_function("Sweet Grass")
 sanders_county <- county_function("Sanders")
 powell_county <- county_function("Powell")
+phillips_county <- county_function("Phillips")
+prairie_county <- county_function("Prairie")
 
 
 
@@ -244,7 +246,8 @@ county_data_combined <- plyr::rbind.fill(missoula_county, gallatin_county,
                                          wibaux_county, blaine_county,
                                          chouteau_county, jbasin_county,
                                          sweetgrass_county, sanders_county,
-                                         powell_county) %>% 
+                                         powell_county, phillips_county,
+                                         prairie_county) %>% 
    group_by(county) %>% 
    mutate("Cumulative total cases" = cumsum(`Daily total cases`),
           "Cumulative active cases" = cumsum(Active),
@@ -256,8 +259,6 @@ output_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 write_csv(county_data_combined, paste0(output_path, "Output/county_data_combined.csv"))
 
 carter_county <- county_function("Carter")
-phillips_county <- county_function("Phillips")
-prairie_county <- county_function("Prairie")
 petroleum_county <- county_function("Petroleum")
 mineral_county <- county_function("Mineral")
 ```
