new county fig and state data updates

--- a/montana_covid_data.Rmd
+++ b/montana_covid_data.Rmd
@@ -217,7 +217,7 @@ sanders_county <- county_function("Sanders")
 powell_county <- county_function("Powell")
 phillips_county <- county_function("Phillips")
 prairie_county <- county_function("Prairie")
-
+mineral_county <- county_function("Mineral")
 
 
 
@@ -247,7 +247,7 @@ county_data_combined <- plyr::rbind.fill(missoula_county, gallatin_county,
                                          chouteau_county, jbasin_county,
                                          sweetgrass_county, sanders_county,
                                          powell_county, phillips_county,
-                                         prairie_county) %>% 
+                                         prairie_county, mineral_county) %>% 
    group_by(county) %>% 
    mutate("Cumulative total cases" = cumsum(`Daily total cases`),
           "Cumulative active cases" = cumsum(Active),
@@ -260,7 +260,6 @@ write_csv(county_data_combined, paste0(output_path, "Output/county_data_combined
 
 carter_county <- county_function("Carter")
 petroleum_county <- county_function("Petroleum")
-mineral_county <- county_function("Mineral")
 ```
 
 
