--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of August 6, 2020"
+date: "Data as of August 10, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -659,6 +659,10 @@ covid_plot_onset <- covid_data %>%
      geom_rect(aes(xmin = Sys.Date() - 21, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
      geom_col(aes(symptom_onset_date_new, case, fill = symptom_onset_date_indicator)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-07-09")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-07-09"), label = "Mask Mandate", vjust = -0.5,
+                 y = 5), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_label(aes(x = Sys.Date()-10, y = 8, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
@@ -768,16 +772,16 @@ missoula_r_plot <- county_r_clean %>%
    #scale_y_continuous(breaks = seq(0, 10, 0.5), labels = seq(0, 10, 0.5)) +
    theme_minimal() +
    theme(strip.text = element_text(size = 16, colour = "black"),
-         title = element_text(size = 12, colour = "black"),
+         title = element_text(size = 18, colour = "black"),
          panel.grid = element_blank(),
          panel.grid.major.y = element_line(colour = "grey"),
-         axis.text.x = element_text(size = 12, colour = "black", 
+         axis.text.x = element_text(size = 16, colour = "black", 
                                     angle = 90, vjust = 0.4),
-         axis.text.y = element_text(size = 12, colour = "black"),
-         legend.text = element_text(size = 12, colour = "black"),
-         axis.title.y = element_text(size = 12, colour = "black",
+         axis.text.y = element_text(size = 16, colour = "black"),
+         legend.text = element_text(size = 16, colour = "black"),
+         axis.title.y = element_text(size = 16, colour = "black",
                                      margin = unit(c(0, 5, 0, 0), "mm")),
-         axis.title.x = element_text(size = 12, colour = "black",
+         axis.title.x = element_text(size = 16, colour = "black",
                                      margin = unit(c(5, 0, 0, 0), "mm")),
          axis.line.x = element_blank(), 
          axis.line.y = element_blank(), 
@@ -786,5 +790,44 @@ missoula_r_plot <- county_r_clean %>%
 missoula_r_plot
 
 #ggsave("C:/R/covid19/missoula_r_plot.png", width = 10, height = 8)
+```
+
+
+```{r}
+contacts_plot <- covid_data %>% 
+   mutate(month_of_year = month(symptom_onset_date_new, label = TRUE)) %>% 
+   group_by(age_group, month_of_year) %>% 
+   mutate(mean_contacts = mean(number_contacts, na.rm = TRUE)) %>% 
+   filter(!is.na(age_group)) %>% 
+   filter(!is.na(month_of_year)) %>% 
+   ggplot() +
+      geom_line(aes(month_of_year, mean_contacts, group = age_group, 
+                    color = age_group), size = 1.5) +
+   theme_minimal() +
+   labs(title = "Mean number of contacts per COVID case, Missoula County",
+        subtitle = "By age group, per month since March, 2020",
+        color = "Age group") +
+   ylab("Mean # contacts") +
+   xlab("") +
+   theme(strip.text = element_text(size = 16, colour = "black"),
+         title = element_text(size = 18, colour = "black"),
+         panel.grid = element_blank(),
+         panel.grid.major.y = element_line(colour = "grey"),
+         axis.text.x = element_text(size = 16, colour = "black", 
+                                    angle = 90, vjust = 0.4),
+         axis.text.y = element_text(size = 16, colour = "black"),
+         legend.text = element_text(size = 16, colour = "black"),
+         axis.title.y = element_text(size = 16, colour = "black",
+                                     margin = unit(c(0, 5, 0, 0), "mm")),
+         axis.title.x = element_text(size = 16, colour = "black",
+                                     margin = unit(c(5, 0, 0, 0), "mm")),
+         axis.line.x = element_blank(), 
+         axis.line.y = element_blank(), 
+         axis.ticks = element_blank()) +
+   scale_color_manual(values = cbPalette)
+
+contacts_plot
+
+#ggsave("C:/R/covid19/contacts_plot.png", width = 10, height = 6)
 ```
 
